help: Lot of changes in C
Added keyboard shortcuts page
Renamed "How do I export photos ?" to "Archive your photos"
Splited tags_manage in two different pages
Some title changes to remove "How do I"
Lot of changes in import

Thanks to Phill Bull and Shaun McCance

Signed-off-by: Debarshi Ray <rishi@gnu.org>

--- a/docs/C/export_folder.page
+++ b/docs/C/export_folder.page
@@ -4,11 +4,11 @@
 <info>
 	<link type="guide" xref="index_export"/>
 	<desc>
-	To export photos in a archive or a folder.
+	To copy photos in a archive or a folder.
 	</desc>
 </info>
-<title>How do I export photos ?</title>
-<p>You can export photos to a directory of your computer.</p>
+<title>Archive your photos</title>
+<p>You can copy photos to a directory of your computer or put them in a archive.</p>
 
 <p>First you have to add the photos you want to export to the export queue. There are many ways to add a photo to the Export Queue.</p>
 <steps>
