--- a/docs/C/index.page
+++ b/docs/C/index.page
@@ -5,7 +5,7 @@
 
   <note style="tip">
     <p>
-      This guide is created for <app>Solang</app>'s 0.4 series. Since there have been some UI regressions from the 0.3 series, this guide may not cover some features of <app>Solang</app> 0.3.
+      This guide is created for <app>Solang</app>'s 0.4 series. Since there have been some UI regressions from the 0.3 series, this guide may not cover some features of <app>Solang</app> 0.3, mostly the import process.
     </p>
   </note>
 
@@ -29,7 +29,15 @@
 		<title>Tags</title>
 		<info>
 			<link type="topic" xref="tags_intro"/>
+			<link type="topic" xref="tags_use"/>
 			<link type="topic" xref="tags_manage"/>
+		</info>
+	</section>
+
+	<section id="index_tips" style="2colum">
+		<title>Tips and Tricks</title>
+		<info>
+			<link type="topic" xref="keys"/>
 		</info>
 	</section>
 
