--- a/docs/C/photos_by_page.page
+++ b/docs/C/photos_by_page.page
@@ -7,7 +7,7 @@
 	To view more than 50 photos.
 	</desc>
 </info>
-<title>Why can't I see all my pictures ?</title>
+<title>I don't see all my photos.</title>
 <p><app>Solang</app> only display 50 photos by page, so you can only preview 50 photos at once.</p>
 <p>Hopefully there are multiple pages.</p>
 <p>To go to the next page you can</p>
