--- a/docs/C/import.page
+++ b/docs/C/import.page
@@ -1,5 +1,5 @@
 <page xmlns="http://projectmallard.org/1.0/"
-      type="guide"
+      type="topic"
       id="import">
 <info>
 	<link type="guide" xref="index_questions"/>
@@ -7,10 +7,7 @@
 	To view your photos in <app>Solang</app>.
 	</desc>
 </info>
-<title>How do I import photos ?</title>
-<p>With <app>Solang</app> you don't need to import photos from your hard drive.</p>
-<p>Indeed <app>Solang</app> uses Tracker to get the list of your photos; so don't worry about importing the new photos you've got from your camera : It's automatically here.</p>
-
-<!-- add links to help for importers here -->
+<title>I can't see any photos</title>
+<p>Solang only displays photos that are indexed by the <app>Tracker search tool</app>, if you don't see your photos Tracker may not be running or your photos may not be indexed. To make sure Tracker indexes your photos use the <app>Search tool preferences</app> from the <gui>System</gui> menu.</p>
 
 </page>
