help: Rewrited intro page
+ some modifications on howto_search

Signed-off-by: Debarshi Ray <rishi@gnu.org>

--- a/docs/C/howto_search.page
+++ b/docs/C/howto_search.page
@@ -12,8 +12,8 @@
   <p>Actually you have to drag and drop one or more filters to the <gui>Search Basket</gui>. <app>Solang</app> will display only photos that correspond to all the filters you have chosen. Today only tags are filters.</p>
   <list>
     <item><p>To add a filter drag a tag from the <gui>Tag List</gui> to the <gui>Search Basket</gui>.</p></item>
-    <item><p>To remove all the filters, click on the <gui>Clear filters</gui> button.</p></item>
-    <item><p>To remove one filter, click on the filter in the <gui>Search Basket</gui> you want to remove and click on the <gui>Clear selected filters</gui> button.</p></item>
+    <item><p>To remove all the filters, right-click on a filter and choose <gui>Select All</gui>, then righ-click on the same filter and choose <gui>Remove</gui>.</p></item>
+    <item><p>To remove one filter, right-click on the filter you want to remove in the <gui>Search Basket</gui> and choose <gui>Remove</gui>.</p></item>
   </list>
 
   <p>What's more you can use the <gui>Free text search</gui> entry to filter photos name.</p>
