--- a/docs/C/intro.page
+++ b/docs/C/intro.page
@@ -9,8 +9,8 @@
 </info>
 <title>Introduction to <app>Solang</app></title>
 <p><app>Solang</app> is a photo manager for the GNOME desktop. It lets you manage your collection of photos by tagging them and searching through them based on various criteria -- tags, EXIF data, dates.</p>
-<p>You don't need to care about importing your photos to view them, as soon as you add photos to your computer you can enjoy them right into <app>Solang</app>.</p>
-<p>If your photos are the wrong way around you can rotate them or flip them in one clic.</p>
+<p>You don't need to care about importing your photos to view them, as soon as you add photos to your computer you can enjoy them right into <app>Solang</app>. In the same way, if you attached tags to a photo from the <app>File manager</app>, they are automatically recognized in <app>Solang</app>.</p>
+<p>If your photos are the wrong way around you can rotate them or flip them in one click.</p>
 <p>You can enjoy your photos with your friends thanks to the slideshow feature and the fullscreen mode.</p>
 
   <figure>
