--- a/docs/C/howto_search.page
+++ b/docs/C/howto_search.page
@@ -6,6 +6,11 @@
 	<desc>
 	Filters your photos.
 	</desc>
+	<credit type="author">
+		<name>Florent Thévenet</name>
+		<email>feuloren@free.fr</email>
+	</credit>
+	<include href="legal.xml" xmlns="http://www.w3.org/2001/XInclude"/>
 </info>
 <title>How do I use the search function?</title>
 
