--- a/docs/C/tags_manage.page
+++ b/docs/C/tags_manage.page
@@ -7,6 +7,11 @@
 	<desc>
 	Create, modify and delete tags.
 	</desc>
+	<credit type="author">
+		<name>Florent Thévenet</name>
+		<email>feuloren@free.fr</email>
+	</credit>
+	<include href="legal.xml" xmlns="http://www.w3.org/2001/XInclude"/>
 </info>
 <title>Manage your tags</title>
 
