--- a/docs/C/tags_use.page
+++ b/docs/C/tags_use.page
@@ -7,6 +7,11 @@
 	<desc>
 	Attach tags to photos and remove them.
 	</desc>
+	<credit type="author">
+		<name>Florent Thévenet</name>
+		<email>feuloren@free.fr</email>
+	</credit>
+	<include href="legal.xml" xmlns="http://www.w3.org/2001/XInclude"/>
 </info>
 <title>Attach tags to photos</title>
 
